plugins {
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id "application"
    id "java"
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {
    implementation "net.dv8tion:JDA:5.0.0-beta.19"
    implementation "com.konghq:unirest-java:3.14.5:standalone"
    implementation "ch.qos.logback:logback-classic:1.4.14"
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
}

shadowJar {
    setMainClassName("org.meteordev.meteorbot.MeteorBot")
}
